Fix context alignment

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -716,8 +716,8 @@
 
   .icon-plus {
     position: absolute;
-    left: 6px;
-    top: 5px;
+    left: 7px;
+    top: 6px;
     opacity: .25;
     .transition(.1s opacity linear);
   }
@@ -785,7 +785,7 @@ ol.context {
     font-family: @font-family-code;
     color: #222;
     background-color: #f6f7f8;
-    line-height: 22px;
+    line-height: 24px;
     font-size: 12px;
     white-space: pre;
     white-space: pre-wrap;
@@ -793,9 +793,9 @@ ol.context {
   }
   > li.active {
     background-color: #f6f7f8;
-    min-height: 22px;
+    min-height: 24px;
     list-style-type: none;
-    border-radius: 3px;
+    border-radius: 2px;
 
     pre {
       color: @grayDark;
@@ -803,15 +803,15 @@ ol.context {
   }
 
   > li:first-child {
-      border-radius: 3px 3px 0 0;
+      border-radius: 2px 2px 0 0;
   }
 
   > li:last-of-type {
-      border-radius: 0 0 3px 3px;
+      border-radius: 0 0 2px 2px;
   }
 
   li.closed {
-    border-radius: 4px;
+    border-radius: 2px;
   }
 
   &.expanded {
